--- a/coffee_project/src/main/resources/templates/product/edit.html
+++ b/coffee_project/src/main/resources/templates/product/edit.html
@@ -38,61 +38,97 @@
             <h1 style="text-align: center">Cập nhật sản phẩm </h1>
             <form action="/product/edit" method="post" th:object="${product}">
                 <div class="container">
-                    <div class="row">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="image-container">
-                                    <img id="imagePreview" th:src="*{productImagePath}" alt="" class="img-thumbnail">
-                                </div>
-                            </div>
-                            <div class="col-md-9">
-                                <div style="background-color: white" class="form-container">
-                                    <input type="hidden" th:field="*{productId}">
-                                    <div class="form-group">
-                                        <b>Nhập tên sản phẩm: <span style="color: red">*</span></b>
-                                        <input type="text" th:field="*{productName}" id="productName"
-                                               class="form-control">
-                                        <div style=" height: 10px">
-                                            <small style="color: red" th:if="${#fields.hasErrors('productName')}"
-                                                   th:errors="*{productName}">  </small>
+                    <div class="">
+                        <div class="">
+                            <form action="/product/create" method="post" th:object="${product}">
+                                <input type="hidden" th:field="*{productId}"/>
+                                <div style="display: grid; grid-template-columns: repeat(1, 2fr 2fr)">
+                                    <div class=" " style="justify-content: end;">
+                                        <div >
+                                            <div class="image-container" style="width: 100%">
+                                                <img id="imagePreview" src="" alt="" class="img-thumbnail">
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <div class="form-group" style="width: 89%;">
+                                                <label for="btnThumbnailURL" class="form-control">Chọn ảnh</label>
+                                                <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
+                                                <input id="btnThumbnailURL" type="file" style="display: none;"/>
+                                                <progress id="uploader" value="0" max="100">0%</progress>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <b>Nhập giá: <span style="color: red">*</span></b>
-                                        <input type="number" th:field="*{productPrice}" id="productPrice"
-                                               class="form-control">
-                                        <div style=" height: 10px">
-                                            <small style="color: red" th:if="${#fields.hasErrors('productPrice')}"
-                                                   th:errors="*{productPrice}">  </small>
+
+                                    <div class="col-md-9">
+                                        <div style="background-color: white" class="form-container">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-4">
+                                                        <b>Tên sản phẩm<span style="color: red">*</span></b>
+                                                    </div>
+                                                    <div class="col-8">
+                                                        <input type="text" th:field="*{productName}" id="productName"
+                                                               class="form-control">
+                                                        <div style=" height: 20px">
+                                                            <small style="color: red"
+                                                                   th:if="${#fields.hasErrors('productName')}"
+                                                                   th:errors="*{productName}"> </small>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-4">
+                                                        <b>Giá<span style="color: red">*</span></b>
+                                                    </div>
+                                                    <div class="col-8">
+                                                        <input type="number" th:field="*{productPrice}" id="salary"
+                                                               class="form-control">
+                                                        <div style=" height: 20px">
+                                                            <small style="color: red"
+                                                                   th:if="${#fields.hasErrors('productPrice')}"
+                                                                   th:errors="*{productPrice}"> </small>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-4">
+                                                        <b>Mô tả</b>
+                                                    </div>
+                                                    <div class="col-8">
+                                                <textarea type="text" th:field="*{productDescription}"
+                                                          id="productDescription"
+                                                          class="form-control"></textarea>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-4">
+                                                        <b>Chọn loại sản phẩm</b>
+                                                    </div>
+                                                    <div class="col-8">
+                                                        <select th:field="*{productType}" id="productType" class="form-control">
+                                                            <option th:each="productType : ${productTypes}"
+                                                                    th:value="${productType.productTypeId}"
+                                                                    th:text="${productType.productTypeName}"></option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <button type="submit" class="btn btn-primary">Sửa</button>
+                                                <a style="color: white" href="/product">
+                                                    <button type="button" class="btn btn-secondary">Hủy</button>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <b for="productDescription">Nhập mô tả:</b>
-                                        <input type="text" th:field="*{productDescription}" id="productDescription"
-                                               class="form-control">
-                                    </div>
-                                    <div class="form-group">
-                                        <b for="thumbnailURL">Chọn ảnh:</b>
-                                        <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
-                                        <input id="btnThumbnailURL" type="file" class="form-control"/>
-                                        <progress id="uploader" value="0" max="100">0%</progress>
-                                    </div>
-                                    <div class="form-group">
-                                        <b for="productType">Chọn loại sản phẩm:</b>
-                                        <select th:field="*{productType}" id="productType" class="form-control">
-                                            <option th:each="productType : ${productTypes}"
-                                                    th:value="${productType.productTypeId}"
-                                                    th:text="${productType.productTypeName}"></option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">Cập nhật</button>
-                                        <a style="color: white" href="/product">
-                                            <button type="button" class="btn btn-secondary">Hủy</button>
-                                        </a>
-                                    </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
