--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -63,16 +63,11 @@
                     </form>
                 </div>
             </nav>
-<!--            Hiển thị thông báo-->
-            <div th:if="${message!=null}">
-                <span><strong  th:text="${message}"></strong></span>
-            </div>
             <div th:if="${message!=null}" class="toast p-0" id="myToast" role="alert"
                  aria-live="assertive" aria-atomic="true">
                 <div style="margin-left: 20px"
                      class="toast-header d-flex justify-content-between bg-success text-dark">
-                    <span><strong th:text="${message}"></strong></span>
-                    aria-label="Đóng"></button>
+                    <span><strong th:text="${message}"></strong></span></button>
                 </div>
             </div>
             <!--    Hiển thị danh sách-->
@@ -153,7 +148,6 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Không</button>
                             <a id="idDelete">
-
                                 <button type="button" class="btn btn-primary" id="myToastBtn">Có</button>
                             </a>
                         </div>
@@ -172,13 +166,10 @@
         document.getElementById('idDelete').href = '/customer/' + id + '/delete'
     }
 
-    const toastTrigger = document.getElementById('myToastBtn')
-    const toastLive = document.getElementById('myToast')
-    if (toastTrigger) {
-        const toast = bootstrap.Toast.getOrCreateInstance(toastLive);
-        toastTrigger.addEventListener('click', () => {
-            toast.show()
-        })
+    window.onload = (event) => {
+        var toastLiveExample = document.getElementById('myToast')
+        var toast = new bootstrap.Toast(toastLiveExample)
+        toast.show()
     }
 </script>
 </body>
