--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -38,7 +38,7 @@
                 <div class="dropdown">
                     <button class="btn btn-success" type="button" id="dropdownMenuButton1"
                             data-bs-toggle="dropdown"
-                         >
+                            aria-expanded="false">
                         <i class="fa-regular fa-user"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
