--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -36,7 +36,7 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <div class="navbar-nav ms-auto text-light">
                 <div class="dropdown">
-                    <button class="btn btn-success" type="button" aria-expanded="false" id="dropdownMenuButton1"
+                    <button class="btn btn-success" type="button" id="dropdownMenuButton1"
                             data-bs-toggle="dropdown"
                             aria-expanded="false">
                         <i class="fa-regular fa-user"></i>
