--- a/coffee_project/src/main/resources/templates/forgot.html
+++ b/coffee_project/src/main/resources/templates/forgot.html
@@ -37,7 +37,7 @@
                     <div style="background: #fefae0" class="login-wrap p-4 p-md-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h2 class="mb-4">Đăng ký</h2>
+                                <h2 class="mb-4">Quên mật khẩu</h2>
                             </div>
                             <div class="w-100">
                                 <p class="social-media d-flex justify-content-end">
@@ -52,19 +52,15 @@
                               class="signin-form">
                             <div class="form-group mb-3">
                                 <label for="username">Tên đăng nhập</label>
-                                <input id="username" th:field="*{username}" type="text" class="form-control" required>
+                                <input id="username"  type="text" class="form-control" required>
                             </div>
                             <div class="form-group mb-3">
-                                <label for="password">Mật khẩu</label>
-                                <input type="password" th:field="*{password}" id="password" class="form-control" required>
-                            </div>
-                             <div class="form-group mb-3">
-                                <label for="password2">Nhập lại mật khẩu</label>
-                                <input type="password" th:field="*{password}" id="password2" class="form-control" required>
+                                <label for="password">Email</label>
+                                <input type="email"  id="password" class="form-control" required>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">Đăng
-                                    ký
+                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">
+                                    Lấy mã
                                 </button>
                             </div>
                             <div class="form-group d-md-flex">
