--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -98,9 +98,11 @@
                         <td th:text="${#dates.format(customer.customerBirthday,'dd-MM-yyyy')}"></td>
                         <td th:text="${customer.customerPhoneNumber}"></td>
                         <td th:text="${customer.customerPoint}"></td>
-                        <td><a th:href="@{/customer/{id}/view(id=${customer.getCustomerId()})}" class="btn btn-primary">
-                            <i
-                                    class="fa-solid fa-circle-info"></i></a></td>
+                        <td>
+                            <a th:href="@{/customer/{id}/view(id=${customer.getCustomerId()})}" class="btn btn-primary">
+                                <i class="fa-solid fa-circle-info"></i>
+                            </a>
+                        </td>
                         <td>
                             <a th:href="@{/customer/{id}/edit(id=${customer.getCustomerId()})}">
                                 <button class="btn btn-primary">
@@ -133,7 +135,9 @@
                    th:href="@{/customer/list(page=${customerPage.number+1},searchName=${searchName})}"><i
                         class="fas fa-forward"></i></a>
             </div>
-            <!-- Modal -->
+
+            <!-- Delete Modal -->
+
             <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
                  aria-hidden="true">
                 <div class="modal-dialog">
