--- a/coffee_project/src/main/resources/templates/product/create.html
+++ b/coffee_project/src/main/resources/templates/product/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -13,8 +13,9 @@
             padding: 20px;
             margin-top: 50px;
             margin-left: 10px;
-            width: 800px;
-            height: 550px;
+            width: 700px; /* Đặt kích thước ban đầu */
+            max-width: 100%; /* Cho phép tự động điều chỉnh kích thước */
+            height: auto;
         }
 
         #imagePreview {
@@ -24,21 +25,15 @@
             margin-bottom: 10px;
             margin-top: 50px;
         }
-        @media (max-width: 768px) {
-            .form-container {
-                width: auto;
-                margin-left: 0;
-            }
-        }
-        .card {
-            margin-top: 50px;
-        }
-
-        @media (max-width: 768px) {
-            .card {
-                margin-top: 0;
-            }
-        }
+        /*@media screen and (max-width: 768px) {*/
+        /*    .form-container {*/
+        /*        padding: 10px;*/
+        /*    }*/
+        /*    .col-md-4, .col-md-8 {*/
+        /*        width: 100%;*/
+        /*        height: 100%;*/
+        /*    }*/
+        /*}*/
     </style>
     <style th:insert="/layout::style"></style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
@@ -49,87 +44,72 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
+        <div class="col-sm-10" style="background-color: #FEFAE0; min-height: 700px">
             <h1 style="text-align: center">Thêm mới sản phẩm</h1>
             <div class="container">
-                <div class="">
-                    <div class="">
-                        <form action="/product/create" method="post" th:object="${product}">
-                            <div style="display: grid; grid-template-columns: repeat(1, 2fr 2fr)">
-                                <div class=" " style="justify-content: end;">
-                                    <div >
-                                        <div class="image-container" style="width: 100%">
-                                            <img id="imagePreview" src="" alt="" class="img-thumbnail">
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="form-group" style="width: 89%;">
-                                            <label for="btnThumbnailURL" class="form-control">Chọn ảnh</label>
-                                            <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
-                                            <input id="btnThumbnailURL" type="file" style="display: none;"/>
-                                            <progress id="uploader" value="0" max="100">0%</progress>
-                                        </div>
-                                    </div>
+                    <form action="/product/create" method="post" th:object="${product}">
+                        <div style="display: inline-flex;">
+                            <div class="col-md-4">
+                                <div class="image-container" style="width: 100%">
+                                    <img id="imagePreview" th:src="*{productImagePath}" alt="" class="img-thumbnail">
                                 </div>
 
-                            <div class="col-md-9">
+                                <div class="form-group">
+                                    <label for="btnThumbnailURL" class="form-control">Chọn ảnh</label>
+                                    <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}" />
+                                    <input id="btnThumbnailURL" type="file" style="display: none;" />
+                                    <progress id="uploader" value="0" max="100">0%</progress>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
                                 <div style="background-color: white" class="form-container">
                                     <div class="form-group">
                                         <div class="row">
-                                            <div class="col-4">
+                                            <div class="col-md-4">
                                                 <b>Tên sản phẩm<span style="color: red">*</span></b>
                                             </div>
-                                            <div class="col-8">
-                                                <input type="text" th:field="*{productName}" id="productName"
-                                                       class="form-control">
-                                                <div style=" height: 20px">
-                                                    <small style="color: red"
-                                                           th:if="${#fields.hasErrors('productName')}"
-                                                           th:errors="*{productName}"> </small>
+                                            <div class="col-md-8">
+                                                <input type="text" th:field="*{productName}" id="productName" class="form-control">
+                                                <div style="height: 28px">
+                                                    <small style="color: red" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></small>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
-                                            <div class="col-4">
+                                            <div class="col-md-4">
                                                 <b>Giá<span style="color: red">*</span></b>
                                             </div>
-                                            <div class="col-8">
-                                                <input type="number" th:field="*{productPrice}" id="salary"
-                                                       class="form-control">
-                                                <div style=" height: 20px">
-                                                    <small style="color: red"
-                                                           th:if="${#fields.hasErrors('productPrice')}"
-                                                           th:errors="*{productPrice}"> </small>
+                                            <div class="col-md-8">
+                                                <input type="number" th:field="*{productPrice}" id="salary" class="form-control">
+                                                <div style="height: 25px">
+                                                    <small style="color: red" th:if="${#fields.hasErrors('productPrice')}" th:errors="*{productPrice}"></small>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
-                                            <div class="col-4">
+                                            <div class="col-md-4">
                                                 <b>Mô tả</b>
                                             </div>
-                                            <div class="col-8">
-                                                <textarea type="text" th:field="*{productDescription}"
-                                                          id="productDescription"
-                                                          class="form-control"></textarea>
+                                            <div class="col-md-8">
+                                                <textarea type="text" th:field="*{productDescription}" id="productDescription" class="form-control"></textarea>
                                             </div>
                                         </div>
+                                            <br>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
-                                            <div class="col-4">
-                                                <b>Chọn loại sản phẩm</b>
-                                            </div>
-                                            <div class="col-8">
-                                                <select th:field="*{productType}" id="productType" class="form-control">
-                                                    <option th:each="productType : ${productTypes}"
-                                                            th:value="${productType.productTypeId}"
-                                                            th:text="${productType.productTypeName}"></option>
-                                                </select>
-                                            </div>
+                                                <div class="col-md-4">
+                                                    <b>Chọn loại sản phẩm</b>
+                                                </div>
+                                                <div class="col-md-8">
+                                                    <select th:field="*{productType}" id="productType" class="form-control">
+                                                        <option th:each="productType : ${productTypes}" th:value="${productType.productTypeId}" th:text="${productType.productTypeName}"></option>
+                                                    </select>
+                                                </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -140,17 +120,16 @@
                                     </div>
                                 </div>
                             </div>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div th:replace="layout::footer"></div>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
 <script>
     document.getElementById('btnThumbnailURL').addEventListener('change', function () {
         var reader = new FileReader();
@@ -163,13 +142,12 @@
 
     //paste here your copied configuration code
     const firebaseConfig = {
-        apiKey: "AIzaSyDFIFtviHbm8hKCtidU9nVSlcD9fcQSvN4",
-        authDomain: "employeecasestudy.firebaseapp.com",
-        projectId: "employeecasestudy",
-        storageBucket: "employeecasestudy.appspot.com",
-        messagingSenderId: "562015708192",
-        appId: "1:562015708192:web:07cf40d25a6339b95d0845",
-        measurementId: "G-CGWJ0KZSJM"
+        apiKey: "AIzaSyAzFisiEuPoL-tzq3kdo3faLimcBYOyKf4",
+        authDomain: "coffee-team2-project.firebaseapp.com",
+        projectId: "coffee-team2-project",
+        storageBucket: "coffee-team2-project.appspot.com",
+        messagingSenderId: "18924172599",
+        appId: "1:18924172599:web:d27940351fb0cafc0516b2"
     };
 
     // Initialize Firebase
@@ -179,7 +157,7 @@
     let fileButton = document.getElementById('btnThumbnailURL');
     fileButton.addEventListener('change', function (e) {
         let file = e.target.files[0];
-        let storageRef = firebase.storage().ref('img/' + file.name);
+        let storageRef = firebase.storage().ref('product/' + file.name);
         let task = storageRef.put(file);
         task.on('state_changed', function progress(snapshot) {
             let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
